deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollout-ex
  labels:
    app: rollout-ex
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rollout-ex
  template:
    metadata:
      name: rollout-ex
      labels:
        app: rollout-ex
    spec:
      containers:
        - name: app1
          image: nginx:1.19.9
