env.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: env-demo
  name: env-demo
spec:
  containers:
  - image: gcr.io/google-samples/node-hello:1.0 
    name: env-demo
