multicontainerpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
 containers:
   - name: nginx
     image: nginx
   - name: tomcat
     image: tomcat
