random-number.yaml
apiVersion: v1
kind: Pod
metadata:
        name: random
spec:
        containers:
                - image: alpine
                  name: alpine
                  command: ["/bin/sh", "-c"]
                  args: ["shuf -i 0-100 -n 1 >> /opt/number.out; sleep 1000;"]
                  volumeMounts:
                          - name: data-volume
                            mountPath: /opt
        volumes:
                - name: data-volume
                  hostPath:
                          path: /tmp
                          type: Directory
