nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-dep
  name: my-cluserip-svc
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 80
  selector:
    app: app1
  type: NodePort
